--- a/.env.exemplo
+++ b/.env.exemplo
@@ -1,5 +1,7 @@
-MYSQL_ROOT_PASSWORD=ligerosmart
-MYSQL_DATABASE=ligerosmart
-MYSQL_USER=ligerosmart
-MYSQL_PASSWORD=ligerosmart
-GF_SERVER_ROOT_URL=http://localhost/
+DB_TYPE=mariadb
+DB_DBNAME=grafana_db
+DB_PORT=3306
+DB_USER=grafana_user
+DB_PASS=grafana_password
+DB_HOST=mysql
+JETTY_HOST=0.0.0.0
