--- a/conf/grafana.ini
+++ b/conf/grafana.ini
@@ -389,16 +389,16 @@ disable_login_form = false
 #################################### Anonymous Auth ######################
 [auth.anonymous]
 # enable anonymous access
-enabled = True
+;enabled = True
 
 # specify organization name that should be used for unauthenticated users
-org_name = LigeroSmart
+;org_name = LigeroSmart
 
 # specify role for unauthenticated users
-org_role = Viewer
+;org_role = Viewer
 
 # mask the Grafana version number for unauthenticated users
-hide_version = true
+;hide_version = true
 
 #################################### GitHub Auth ##########################
 [auth.github]
